# green-impurity

./: .gitignore  CMakeLists.txt  README.md
.github/: codecov.yml
.github/workflows/: test.yaml
cmake/: GreenDeps.cmake
src/: CMakeLists.txt
src/green/ed/: bath_fitting.h
src/green/impurity/: bath_fitting.h  impurity_solver.h  inchworm_inpurity_solver.h
test/: CMakeLists.txt  bath_fitting_test.cpp  impurity_solver_test.cpp
test/data/: bath.txt  data.h5  ed.0.input.h5  ed.1.input.h5  input.h5  transform.h5
